p2/confs/apps/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginx:alpine
        ports: 
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-app1
      volumes:
      - name: html-app1
        hostPath:
          path: /vagrant/confs/pages/app1/
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
