p2/confs/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    spec.ingressClassName: traefik #use traefik controller fixed warning to use spec,ingress unsteed of kub.io...
    #kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
                name: app-one
                port: 
                    number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
                name: app-two
                port: 
                    number: 80
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
                name: app-three
                port: 
                    number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
                name: app-three
                port: 
                    number: 80
#kubectl get ingress -A
